# nihil

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README  clang-tidy.conf
contrib/catch2/src/catch2/internal/: catch_reusable_string_stream.hpp
modules/: CMakeLists.txt  ctype.ccm  generator.ccm  guard.ccm  nihil.ccm  tabulate.ccm
nihil/: CMakeLists.txt  argv.cc  argv.ccm  command_map.cc  command_map.ccm  ctype.ccm  ensure_dir.cc  ensure_dir.ccm  errc.cc  errc.ccm  error.cc  error.ccm  exec.cc  exec.ccm  fd.cc  fd.ccm  find_in_path.cc  find_in_path.ccm  format_filesystem.ccm  generator.ccm  generic_error.ccm  getenv.cc  getenv.ccm  guard.ccm  match.ccm  monad.ccm  next_word.ccm  nihil.ccm  open_file.cc  open_file.ccm  parse_size.ccm  process.cc  process.ccm  read_file.ccm  rename_file.cc  rename_file.ccm  skipws.ccm  spawn.ccm  tabulate.ccm  usage_error.ccm  (+2 more)
nihil.cli/: CMakeLists.txt  command.cc  command.ccm  command.test.cc  command_map.cc  command_map.ccm  command_node.cc  command_node.ccm  command_path.ccm  command_tree.cc  command_tree.ccm  command_tree.test.cc  dispatch_command.cc  dispatch_command.ccm  dispatch_command.test.cc  nihil.cli.ccm  parse_flags.ccm  parse_flags.test.cc  registry.cc  registry.ccm  test.cc  test_command_map.cc  usage_error.ccm
nihil.config/: CMakeLists.txt  error.ccm  nihil.config.ccm  option.cc  option.ccm  read.cc  read.ccm  store.cc  store.ccm  string.cc  string.ccm  string.test.cc  write.cc  write.ccm
nihil.config/tests/: CMakeLists.txt  string.cc
nihil.core/: CMakeLists.txt  capture_stream.ccm  capture_stream.test.cc  construct.ccm  ctype.ccm  ctype.test.cc  errc.cc  errc.ccm  error.ccm  error.test.cc  features.ccm  flagset.ccm  flagset.test.cc  generator.ccm  generator.test.cc  guard.ccm  guard.test.cc  match.ccm  match.test.cc  monad.ccm  monad.test.cc  next_word.ccm  next_word.test.cc  nihil.core.ccm  nihil.hh  parse_size.ccm  parse_size.test.cc  save_errno.ccm  skipws.ccm  skipws.test.cc  sys_error.ccm  tabulate.ccm  tabulate.test.cc  uuid.ccm  uuid.test.cc
nihil.error/: CMakeLists.txt  error.cc  error.ccm  error.test.cc  sys_error.ccm  test.cc
nihil.flagset/: CMakeLists.txt  flagset.ccm  test.cc
nihil.generator/: CMakeLists.txt  byte_allocator.ccm  coroutine_traits.ccm  elements_of.ccm  forward.ccm  generator.ccm  generator.test.cc  generator_promise.ccm  generator_promise_base.ccm  manual_lifetime.ccm  nihil.generator.ccm  promise_base_alloc.ccm  test.cc  util.ccm
nihil.guard/: CMakeLists.txt  guard.ccm  test.cc
nihil.match/: CMakeLists.txt  match.ccm  test.cc
nihil.monad/: CMakeLists.txt  monad.ccm  test.cc
nihil.posix/: CMakeLists.txt  argv.cc  argv.ccm  argv.test.cc  ensure_dir.ccm  exec.cc  exec.ccm  execl.ccm  execl.test.cc  execlp.ccm  execlp.test.cc  execshell.ccm  execshell.test.cc  executor.ccm  execv.cc  execv.ccm  execv.test.cc  execvp.cc  execvp.ccm  execvp.test.cc  fd.cc  fd.ccm  fd.test.cc  fexecv.cc  fexecv.ccm  fexecvp.ccm  find_in_path.cc  find_in_path.ccm  find_in_path.test.cc  getenv.cc  getenv.ccm  getenv.test.cc  nihil.posix.ccm  open.ccm  open.test.cc  open_in_path.cc  open_in_path.ccm  open_in_path.test.cc  paths.ccm  posix.ccm  (+30 more)
nihil.std/: CMakeLists.txt  nihil.std.ccm
nihil.ucl/: CMakeLists.txt  array.ccm  array.test.cc  boolean.cc  boolean.ccm  boolean.test.cc  emit.cc  emit.ccm  emit.test.cc  errc.cc  errc.ccm  error.cc  error.ccm  integer.cc  integer.ccm  integer.test.cc  map.ccm  map.test.cc  nihil.ucl.ccm  object.cc  object.ccm  object.test.cc  object_cast.ccm  parse.test.cc  parser.cc  parser.ccm  real.cc  real.ccm  real.test.cc  string.cc  string.ccm  string.test.cc  type.cc  type.ccm
nihil.ucl/tests/: CMakeLists.txt  array.cc  boolean.cc  emit.cc  integer.cc  map.cc  object.cc  parse.cc  real.cc  string.cc
nihil.util/: CMakeLists.txt  capture_stream.ccm  capture_stream.test.cc  construct.ccm  ctype.ccm  ctype.test.cc  error.ccm  flagset.ccm  flagset.test.cc  guard.ccm  guard.test.cc  match.ccm  match.test.cc  monad.ccm  monad.test.cc  next_word.ccm  next_word.test.cc  nihil.util.ccm  parse_size.ccm  parse_size.test.cc  save_errno.ccm  skipws.ccm  skipws.test.cc  sys_error.ccm  tabulate.ccm  tabulate.test.cc  test_capture_stream.cc  test_ctype.cc  test_next_word.cc  test_parse_size.cc  test_skipws.cc  test_tabulate.cc  uuid.ccm  uuid.test.cc
nihil.uuid/: CMakeLists.txt  test.cc  uuid.ccm
nihil/tests/: CMakeLists.txt  command_map.cc  error.cc  fd.cc  generator.cc  generic_error.cc  getenv.cc  guard.cc  monad.cc  parse_size.cc  spawn.cc  tabulate.cc  uuid.cc
tests/: CMakeLists.txt  command_map.cc  ctype.cc  fd.cc  generic_error.cc  next_word.cc  skipws.cc  spawn.cc
